<resources>
    <string name="app_name">FeelingDiary</string>
    <string name="select_feeling_ball_title">Select today\'s feeling</string>
    <string name="select_feeling_ball_dsc">Select 5 things\n you usually feel.</string>
    <string name="no_title">Diary name</string>
    <string name="sad">Sad</string>
    <string name="soso">So so</string>
    <string name="gloomy">Gloomy</string>
    <string name="happy">Happy</string>
    <string name="angry">Angry</string>
    <string name="nofeel">nofeel</string>
    <string name="touched">Impressed</string>
    <string name="bored">Bored</string>
    <string name="romance">Romantic</string>
    <string name="wish">Wishful</string>
    <string name="acheivement">fulfilled</string>
    <string name="sad_desc">I would like to console you\nin your sad feeling.</string>
    <string name="soso_desc">Let\'s write a daily routine.</string>
    <string name="gloomy_desc">People all feel\ngloomy sometimes.</string>
    <string name="happy_desc">Let\'s fill in your good feeling.</string>
    <string name="angry_desc">It is normal to feel\nangry sometimes.</string>
    <string name="nofeel_desc">nofeel</string>
    <string name="touched_desc">Let\'s collect your\nimpressive moments.</string>
    <string name="bored_desc">Was it boring today?\nLet\'s have much more fun!</string>
    <string name="romance_desc">Let\'s remember a wonderful moment.</string>
    <string name="wish_desc">You can write a diary\nfor your wishes.</string>
    <string name="acheivement_desc">It is a wonderful moment\nthat all your wish comes true.</string>
    <string name="start">Start</string>
    <string name="intro_1">Welcome! Let\'s write\na precious feeling\nonce a day.</string>
    <string name="intro_2">Diary name</string>
    <string name="intro_2_hint">Name</string>
    <string name="intro_3_pick">Let\'s select 5 feelings\nyou usually do.</string>
    <string name="intro_3_msg">You can change the feeling\nwhenever you want.</string>
    <string name="intro_4_text">Congratulation!\nFeeling collection is completed for you.</string>
    <string name="skip">Skip</string>
    <string name="ok">Okay</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_diary">If you delete the diary,\nit will be saved with no content \nand no feeling in storage.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="take_this">Select</string>
    <string name="deselect">Unselect</string>
    <string name="min_select_ball_msg">For a diary,\nyou should have a feeling or more.</string>
    <string name="max_select_ball_msg">You can\'t select more than 5 feelings.\nPlease unselect feelings\nyou don\'t use anymore.</string>
    <string name="sound">BGM</string>
    <string name="opensource">Open-source license</string>
    <string name="receive">Take this</string>
    <string name="next_month_msg">What\'s happening in %2$d.%1$d?</string>

    <string name="dialog_today">Today\'s feeling "%1$s"</string>
    <string name="dialog_time_format">%1$2d:%2$2d</string>
    <string name="dialog_remaining_time">Input your tomorrow\'s feeling in </string>
    <string name="dialog_empty_ball">How are you feeling\non %1$d.%2$d?</string>
    <string name="dialog_empty_ball_title">Previous diary</string>
    <string name="dialog_empty_ball_go_write">Go to the previous diary.</string>

    <string name="toast_input_photo">Select a photo the most memorable.</string>
    <string name="toast_save_diary">Saved a memory.</string>
    <string name="toast_modify_diary">Modified the diary.</string>
    <string name="toast_drawer_desc">Select 5 things you usually feel.</string>
    <string name="toast_empty_add_diary">Recall the feeling on %1$d.%2$d.</string>
    <string name="toast_image_load_fail">Image load fail..</string>
</resources>
