<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tbja.co.kr.feelingdiary.view.intro.activity.Intro2Activity"
    android:background="@drawable/main_bg_3"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="193dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d7d8da"
            android:textSize="26.75dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/intro_2"
            android:lineSpacingExtra="10dp"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/et_diary_title_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="24dp"
            android:hint="@string/intro_2_hint"
            android:textColorHint="#33d7d8da"
            android:background="@null"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textCursorDrawable="@drawable/cursor_color"
            android:maxLines="1"
            android:inputType="text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4C575c6b"
            android:layout_marginTop="2dp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_move_act"
        android:layout_width="wrap_content"
        android:layout_height="46.5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64.25dp"
        android:background="@drawable/btn_round_rec2"
        android:text="@string/ok"
        android:textColor="#ffffff"
        android:textSize="16.75dp"
        android:paddingLeft="39.5dp"
        android:paddingRight="39.5dp"
        android:textAllCaps="false"
        />
    <LinearLayout
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19.25dp"
        android:layout_marginBottom="17.5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C4ffffff"
            android:textSize="14dp"
            android:text="@string/skip"
            android:layout_marginRight="6dp"
            />
        <ImageView
            android:layout_width="5dp"
            android:layout_height="10dp"
            android:background="@drawable/btn_skip"
            />
    </LinearLayout>

</RelativeLayout>
